K8S/orders-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordernpservice-srv
spec:
  type: NodePort
  selector:
    app: orderservice
  ports:
    - name: orderservice
      protocol: TCP
      port: 80
      targetPort: 80
