K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-srv
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules: 
  - host: localhost
    http:
     paths:
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: products-clusterip-srv  
            port:
              number: 80
      - path: /api/c/orders
        pathType: Prefix
        backend:
          service: 
            name: orders-clusterip-srv
            port:
              number: 80 
      - path: /api/c/shippings
        pathType: Prefix
        backend:
          service: 
            name: shippings-clusterip-srv
            port:
              number: 80
